Fix 'z-index' value for the 'dialog' block

--- a/source/sass/blocks/dialog.scss
+++ b/source/sass/blocks/dialog.scss
@@ -10,7 +10,7 @@
 }
 
 .dialog {
-  z-index: 5;
+  z-index: 50;
 
   display: flex;
 
@@ -25,7 +25,7 @@
 
 .dialog__window {
   position: relative;
-  z-index: 5;
+  z-index: 50;
 
   flex-shrink: 0;
   flex-basis: auto;
